--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.8.1
+crispy-bootstrap4==2024.1
+dj-database-url==0.5.0
 Django==5.0.6
 django-allauth==0.63.3
 django-countries==7.6.1
 django-crispy-forms==2.2
 pillow==10.3.0
+psycopg2==2.9.9
 pytz==2024.1
 sqlparse==0.5.0
 stripe==10.1.0
