--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.0.6
 django-allauth==0.63.3
 django-countries==7.6.1
 django-crispy-forms==2.2
+gunicorn==22.0.0
 pillow==10.3.0
 psycopg2==2.9.9
 pytz==2024.1
