--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ crispy-bootstrap4==2024.1
 dj-database-url==0.5.0
 Django==5.0.6
 django-allauth==0.63.3
+django-cors-headers==4.4.0
 django-countries==7.6.1
 django-crispy-forms==2.2
 django-storages==1.14.4
